gccida/c0/print_version
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_version/src/toplev.c:4871:7: error: use of undeclared identifier 'arg0'
v4 = &arg0; 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_version/src/toplev.c:4879:1: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
lang_hooks_0.name, 
^~~~~~~~~~~~
lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_version/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_version/src/obj/toplev.o] Error 1
